root@e76213e914e0:/workspaces/JFuncLOC# java -jar target/loc-tool-0.1.0-jar-with-dependencies.jar annotation target/loc-tool-0.1.0.jar SLF4J: No SLF4J providers were found. SLF4J: Defaulting to no-operation (NOP) logger implementation SLF4J: See https://www.slf4j.org/codes.html#noProviders for further details. エラーが発生しました: No call graph present in Scene. Maybe you want Whole Program mode (-w). java.lang.RuntimeException: No call graph present in Scene. Maybe you want Whole Program mode (-w).         at soot.Scene.getCallGraph(Scene.java:1430)         at org.example.LocTool.setupSoot(LocTool.java:117)         at org.example.LocTool.main(LocTool.java:31)

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,6 @@
 {
-    "java.compile.nullAnalysis.mode": "automatic"
+    "java.configuration.updateBuildConfiguration": "interactive",
+    "java.compile.nullAnalysis.mode": "disabled",
+    "java.search.scope": "main",
+    "java.format.settings.url": ".vscode/java-formatter.xml"
 }
