--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -16,4 +16,5 @@
         }
     },
     "forwardPorts": []
+    // git config --global --unset commit.gpgsign && git config --global --unset gpg.format && git config --global --unset gpg.ssh.program
 } 
