--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,11 @@
       <artifactId>commons-io</artifactId>
       <version>${commons-io.version}</version>
     </dependency>
+    <dependency>
+      <groupId>org.slf4j</groupId>
+      <artifactId>slf4j-simple</artifactId>
+      <version>2.0.9</version>
+    </dependency>
   </dependencies>
   <build>
     <plugins>
