--- a/feature-loc-analyzer/callgraph-generator/pom.xml
+++ b/feature-loc-analyzer/callgraph-generator/pom.xml
@@ -3,7 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <groupId>com.example</groupId>
+        <groupId>dev.ch3cooh0.jfuncloc</groupId>
         <artifactId>feature-loc-analyzer</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
@@ -28,9 +28,44 @@
             <artifactId>soot</artifactId>
         </dependency>
         <dependency>
-            <groupId>com.example</groupId>
+            <groupId>dev.ch3cooh0.jfuncloc</groupId>
             <artifactId>shared-utils</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter</artifactId>
+            <version>5.9.2</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-assembly-plugin</artifactId>
+                <version>3.6.0</version>
+                <configuration>
+                    <archive>
+                        <manifest>
+                            <mainClass>dev.ch3cooh0.jfuncloc.callgraph.Main</mainClass>
+                        </manifest>
+                    </archive>
+                    <descriptorRefs>
+                        <descriptorRef>jar-with-dependencies</descriptorRef>
+                    </descriptorRefs>
+                </configuration>
+                <executions>
+                    <execution>
+                        <id>make-assembly</id>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>single</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
+    </build>
 </project>
