--- a/feature-loc-analyzer/feature-loc-aggregator/pom.xml
+++ b/feature-loc-analyzer/feature-loc-aggregator/pom.xml
@@ -3,7 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <groupId>com.example</groupId>
+        <groupId>dev.ch3cooh0.jfuncloc</groupId>
         <artifactId>feature-loc-analyzer</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
@@ -28,17 +28,17 @@
             <artifactId>picocli</artifactId>
         </dependency>
         <dependency>
-            <groupId>com.example</groupId>
+            <groupId>dev.ch3cooh0.jfuncloc</groupId>
             <artifactId>callgraph-generator</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
         <dependency>
-            <groupId>com.example</groupId>
+            <groupId>dev.ch3cooh0.jfuncloc</groupId>
             <artifactId>function-loc-counter</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
         <dependency>
-            <groupId>com.example</groupId>
+            <groupId>dev.ch3cooh0.jfuncloc</groupId>
             <artifactId>entrypoint-detector</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
@@ -63,6 +63,30 @@
                                 </transformer>
                             </transformers>
                         </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-assembly-plugin</artifactId>
+                <version>3.6.0</version>
+                <configuration>
+                    <archive>
+                        <manifest>
+                            <mainClass>dev.ch3cooh0.jfuncloc.aggregator.Main</mainClass>
+                        </manifest>
+                    </archive>
+                    <descriptorRefs>
+                        <descriptorRef>jar-with-dependencies</descriptorRef>
+                    </descriptorRefs>
+                </configuration>
+                <executions>
+                    <execution>
+                        <id>make-assembly</id>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>single</goal>
+                        </goals>
                     </execution>
                 </executions>
             </plugin>
