--- a/feature-loc-analyzer/pom.xml
+++ b/feature-loc-analyzer/pom.xml
@@ -2,7 +2,7 @@
     xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.example</groupId>
+    <groupId>dev.ch3cooh0.jfuncloc</groupId>
     <artifactId>feature-loc-analyzer</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>pom</packaging>
@@ -40,7 +40,7 @@
             <dependency>
                 <groupId>org.soot-oss</groupId>
                 <artifactId>soot</artifactId>
-                <version>4.3.0</version>
+                <version>4.6.0</version>
             </dependency>
             <dependency>
                 <groupId>fr.inria.gforge.spoon</groupId>
