--- a/feature-loc-analyzer/shared-utils/pom.xml
+++ b/feature-loc-analyzer/shared-utils/pom.xml
@@ -3,7 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <groupId>com.example</groupId>
+        <groupId>dev.ch3cooh0.jfuncloc</groupId>
         <artifactId>feature-loc-analyzer</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
