--- a/feature-loc-analyzer/callgraph-generator/pom.xml
+++ b/feature-loc-analyzer/callgraph-generator/pom.xml
@@ -38,6 +38,22 @@
             <version>5.9.2</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>info.picocli</groupId>
+            <artifactId>picocli</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-core</artifactId>
+            <version>5.12.0</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-junit-jupiter</artifactId>
+            <version>5.12.0</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <build>
@@ -49,7 +65,7 @@
                 <configuration>
                     <archive>
                         <manifest>
-                            <mainClass>dev.ch3cooh0.jfuncloc.callgraph.Main</mainClass>
+                            <mainClass>dev.ch3cooh0.jfuncloc.callgraph.CallGraphGenaratorCli</mainClass>
                         </manifest>
                     </archive>
                     <descriptorRefs>
