--- a/feature-loc-analyzer/feature-loc-aggregator/pom.xml
+++ b/feature-loc-analyzer/feature-loc-aggregator/pom.xml
@@ -59,7 +59,7 @@
                         <configuration>
                             <transformers>
                                 <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                                    <mainClass>com.example.aggregator.FeatureLocAggregatorCli</mainClass>
+                                    <mainClass>dev.ch3cooh0.jfuncloc.aggregator.FeatureLocAggregatorCli</mainClass>
                                 </transformer>
                             </transformers>
                         </configuration>
