--- a/feature-loc-analyzer/function-loc-counter/pom.xml
+++ b/feature-loc-analyzer/function-loc-counter/pom.xml
@@ -32,6 +32,10 @@
             <artifactId>shared-utils</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>info.picocli</groupId>
+            <artifactId>picocli</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
