README.mdを更新し、JFuncLOCの機能と使用方法を詳細に説明しました。また、エントリーポイント検出機能を強化し、YAML/JSON形式の機能定義ファイルのサポートを追加しました。さらに、機能別LOC集計のCLIを実装し、出力形式を改善しました。新たにFeatureConfigおよびFeatureLocResultクラスを追加し、テストケースも整備しました。

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -16,6 +16,6 @@
             ]
         }
     },
-    "forwardPorts": []
-    // git config --global --unset commit.gpgsign && git config --global --unset gpg.format && git config --global --unset gpg.ssh.program
+    "forwardPorts": [],
+    "postStartCommand": "git config --global --unset commit.gpgsign || true && git config --global --unset gpg.format || true && git config --global --unset gpg.ssh.program || true"
 } 
